# gnordvpn

./: .gitignore  CHANGELOG  LICENSE  README.md  de.moekesch.gnordvpn.desktop  main.py  pyproject.toml
data/: nordvpn.py  user.py
gnordvpn/: __main__.py
gnordvpn/data/: __init__.py  connection.py  nordvpn.py  nordvpnexception.py  nordvpnsettings.py  user.py
gnordvpn/ui/: __init__.py  gnordvpnabout.py  gnordvpnwindow.py  gnordvpnwindow.ui
src/data/: connection.py  connectionstatus.py  nordvpn.py  nordvpnsettings.py
ui/: gnordvpnabout.py  gnordvpnwindow.py  gnordvpnwindow.ui
