[build-system]
requires = ["setuptools>=65", "setuptools-scm" ]
build-backend = "setuptools.build_meta"

[project]
name = "GNordVPN"
version = "0.1.1"
description = "GNordVPN - Open-source graphical NordVPN client for Linux written in Python using GTK4 and Libadwaita."
keywords = ["vpn", "nordvpn", "network", "gui", "linux", "gtk4", "libadwaita", "adw", "adwaita"]
authors = [{name = "Andreas Moekesch"}]
dependencies = ["PyGObject>=3.44.1", "pycairo>=1.19.2", "setproctitle>=1.3.2"]
license = {file = "LICENSE"}
requires-python = ">=3.9"
readme = "README.md"

[project.urls]
repository = "https://github.com/amoekesch/gnordvpn"

[project.scripts]
gnordvpn = "gnordvpn.__main__:main"