[build-system]
requires = ["setuptools>=65", "setuptools-scm" ]
build-backend = "setuptools.build_meta"

[project]
name = "GNordVPN"
version = "0.1.2"
description = "GNordVPN - Open-source graphical NordVPN client for Linux written in Python using GTK4 and Libadwaita."
keywords = ["vpn", "nordvpn", "network", "gui", "linux", "gtk4", "libadwaita", "adw", "adwaita"]
authors = [{name = "Andreas Moekesch"}]
dependencies = ["PyGObject>=3.44.1", "pycairo>=1.19.2", "setproctitle>=1.3.2"]
license = {file = "LICENSE"}
requires-python = ">=3.9"
readme = "README.md"

[project.urls]
repository = "https://github.com/amoekesch/gnordvpn"

[project.scripts]
gnordvpn = "gnordvpn.__main__:main"

[tool.briefcase]
project_name = "GNordVPN"
bundle = "de.moekesch"
version = "0.1.2"
url = "https://github.com/amoekesch/gnordvpn"
license = "MIT license"
author = "Andreas Moekesch"
author_email = "moekesch@gmail.com"

[tool.briefcase.app.gnordvpn]
formal_name = "GNordVPN"
description = "GNordVPN - Open-source graphical NordVPN client for Linux written in Python using GTK4 and Libadwaita."
long_description = """GNordVPN is an easy-to-use graphical user interface (GUI) wrapping the core functionality provided by NordVPN Linux command-line interface (CLI).
It relies directly on the NordVPN CLI and provides the most commonly used features in a user-friendly interface.
"""
icon = "gnordvpn/resources/icons/de.moekesch.gnordvpn"
sources = [
    "gnordvpn",
]
test_sources = [
    "tests",
]

requires = [
    "PyGObject>=3.44.1",
    "pycairo>=1.19.2",
    "setproctitle>=1.3.2"
]
test_requires = [
    "pytest",
]

[tool.briefcase.app.gnordvpn.macOS]
requires = [
    "std-nslog~=1.0.0"
]

[tool.briefcase.app.gnordvpn.linux]
requires = [
]

[tool.briefcase.app.gnordvpn.linux.system.debian]
system_requires = [
]

system_runtime_requires = [
]

[tool.briefcase.app.gnordvpn.linux.system.rhel]
system_requires = [
]

system_runtime_requires = [
]

[tool.briefcase.app.gnordvpn.linux.system.arch]
system_requires = [
]

system_runtime_requires = [
]

[tool.briefcase.app.gnordvpn.linux.appimage]
manylinux = "manylinux2014"

system_requires = [
]
linuxdeploy_plugins = []

[tool.briefcase.app.gnordvpn.linux.flatpak]

[tool.briefcase.app.gnordvpn.windows]
requires = []

# Mobile deployments
[tool.briefcase.app.gnordvpn.iOS]
supported = false

[tool.briefcase.app.gnordvpn.android]
supported = false

# Web deployments
[tool.briefcase.app.gnordvpn.web]
supported = false
